--- a/Dashboard_Application/Controls/app/build.gradle
+++ b/Dashboard_Application/Controls/app/build.gradle
@@ -23,8 +23,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
     compile 'com.jcraft:jzlib:1.1.3'
     compile 'com.jcraft:jsch.agentproxy:0.0.9'
     compile 'com.jcraft:jsch:0.1.54'
+    compile 'jsch:jsch:0.1.29'
 }
