--- a/BrakingSystem/Android/app/build.gradle
+++ b/BrakingSystem/Android/app/build.gradle
@@ -2,9 +2,9 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion "24.0.3"
     defaultConfig {
-        applicationId "com.ist440.android"
+        applicationId "ist440.android"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
@@ -25,6 +25,5 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
 }
