--- a/Dashboard_Application/Controls/app/src/main/AndroidManifest.xml
+++ b/Dashboard_Application/Controls/app/src/main/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ist440.controls">
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-sdk
+        android:targetSdkVersion="14" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
