--- a/SafetyAndAccessControlSystem/AndroidApp/app/build.gradle
+++ b/SafetyAndAccessControlSystem/AndroidApp/app/build.gradle
@@ -13,14 +13,15 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
+    compile files('libs/jsch-0.1.54.jar')
 }
