--- a/SafetyAndAccessControlSystem/AndroidApp/app/src/main/AndroidManifest.xml
+++ b/SafetyAndAccessControlSystem/AndroidApp/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="saac.androidapp">
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-sdk
+        android:targetSdkVersion="14" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
