Disabled landscape screen rotation

--- a/SafetyAndAccessControlSystem/AndroidApp/app/src/main/AndroidManifest.xml
+++ b/SafetyAndAccessControlSystem/AndroidApp/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:label="Safety and Access Control"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Main">
+        <activity
+            android:name=".Main"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
