--- a/BrakingSystem/PiBraking/app/src/main/AndroidManifest.xml
+++ b/BrakingSystem/PiBraking/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".PiBraking"></activity>
+        <activity android:name=".PiBraking"
+            android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
